Latest CVS Changes 07/10/05
  - added NHML import/export. NHML is an XML representation of the NHNT file, with add-ons and a more flexible way of integrating media. Doc to come on web site
  - fixed bug in meta items storage (existing items were corrupted on file rewrite)
  - fixed splitx option to support end times larger than file duration
  - clean-up of 2D direct rendering mode: 
      * no more bounds tracking for less memory usage
      * automatically mode switch to direct rendering when using slide navigation (pan&zoom)
  - clean-up of soft raster: 
      * removed all bezier curbs handling, let gpac core handle those
      * paths are now always flatten to reduce rastering times
      * misc optimizations of scanline converter (no more Y-sorting, only X-sorting used)
  - fixed globalQP context loading issues
  - minor speed improvement of BT/WRL loader
  - updated makefiles for compilation under GPE (doc still to come)
  - fixed bugs related to cache in file downloader
  - made FreeType plugin log unknown fonts in general cfg file to speed up font selection.
  - fixed display bug when switching between MPEG-4 and SVG scenes
  - fixed absolute URLs handling on WinCE devices
  - changed module naming - all modules are now prefixed with "gm_", and module is loaded/unloaded at run-time
  - changed isomedia file open API for better support of temporary directories
  - simplified 2D blitter for non DirectX output: no more in-middle surface used, direct stretch, blit and yuv conversion to back buffer
  - added software and hardware support for MaterialKey in 2D renderer
  - added all project files for evc4
  - added support for OpenGL-ES in 3D renderer, in DX and in GAPI plugins 
      * tested with Hybrid Graphics, Vincent3D. Suggested library is Hybrid implementation
      * Klimt could compile but no decent results
      * Result only tested on PocketPC with Win PPC2003
  - added support for GDI drawing on WinCE to avoid weird menu behaviour in windowed mode